2024-04-27 : 0.9 released!
  - add : Gluster replicated disks
  - fix : host device on guest
  - add : Services panel

2024-04-16 : 0.8 released!
  - assign ip address to NetworkVirtual after reboot or on link_up()

2024-04-15 : 0.7 released!
  - add iSCSI chap auth support

2024-04-12 : 0.6 released!
  - update docs for iSCSI
  - add Host.hostname
  - add checks for migration
  - UI updates

2024-04-10 : 0.5 released!
  - iSCSI format works but still unable to mount
    - search for gfs2 or ocfs2 setup guides online for help
  - add clone VM
  - add Admin panel to change admin password
  - many ui updates

2024-04-03 : 0.4 released!
  - fixed live migration

2024-04-02 : 0.3 released!
  - show NetworkVirtual VLAN and Bridge info
  - show Disk Path info
  - live migration is not working due to VNC port binding
    - this will take some major changes to address this issue
    - a port will have to be allocated that is unique for all servers in the cluster

2024-03-28 : 0.2 released!
  - implement data and compute migration
    - live migration not working
  - fix and test NFS storage support
  - add clustering support (required for compute migration)

2024-03-26 : 0.1 released!
  - init public release